--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800&display=swap');
 
 :root {
+  --clr-dark-element:  hsl(209, 23%, 22%);
+  --clr-background:  hsl(207, 26%, 17%);
+  --clr-text:   hsl(0, 0%, 100%);
+  --clr-gray: hsl(0, 0%, 52%);
+  --clr-shadow: rgba(0, 0, 0, 0.25);
+  --ff-nunito: 'Nunito Sans';
+
+  --content_center: 8% !important;
+}
+
+[data-theme="light"] {
+  --clr-background:  hsl(0, 0%, 98%);
+  --clr-text:   hsl(200, 15%, 8%);
+  --clr-shadow: hsl(0, 0%, 52%);
 
 }
 
@@ -14,10 +28,12 @@
 
 html{
   font-size: 16px !important;
+  min-width: 375px !important;
 }
 
 body{
-
+  background-color: var(--clr-background);
+  font-family: var(--ff-nunito);
 }
 
 img{
@@ -54,3 +70,64 @@ a{
   cursor: pointer;
   display: inline-block;
 }
+
+/* HEADER */
+.header{
+  padding: 1rem var(--content_center);
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0 0 5px 4px rgba(0, 0, 0, 0.25);
+}
+
+.header h1{
+  font-size: 1rem;
+  color: var(--clr-text);
+}
+
+#btn__theme{
+  background-color: transparent;
+  color: var(--clr-text);
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  border: 0;
+  font-weight: 700;
+}
+
+/* FILTERS */
+.filter{
+  border: 1px solid red;
+  margin: 50px 0px;
+  padding: 1rem var(--content_center);
+}
+
+
+/* COUNTRIES */
+.countries{
+  padding: 1rem var(--content_center);
+  border: 1px solid red;
+}
+
+
+/* TABLETS */
+@media (min-width: 768px) and (max-width: 1023px) {
+  .filter{
+    border: 1px solid red;
+    margin: 50px 0px;
+    padding: 1rem var(--content_center);
+    display: flex;
+    justify-content: space-between;
+  }
+  
+}
+
+/* LAPTOP TO DESKTOP */
+@media screen and (min-width: 1024px) {
+
+  .header h1{
+    font-size: 2rem;
+    color: var(--clr-text);
+  }
+
+
+}  
