--- a/src/index.css
+++ b/src/index.css
@@ -122,14 +122,14 @@ a{
   background-color: transparent;
   outline: none !important;
   border: 0 !important;
-  caret-color: lightskyblue;
+  caret-color: rgb(21, 169, 255);
   color: var(--clr-text);
   font-size: 16px;
   width: 100%;
 }
 
 .search input:focus ~ svg{
-  color: lightskyblue;
+  color: rgb(21, 169, 255);
 }
 
 
@@ -150,19 +150,17 @@ a{
 /* COUNTRIES */
 .countries{
   padding: 1rem var(--content_center);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  /* display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 16px; */
+  border: 1px solid red;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(16.2rem, 1fr));
+  grid-gap: 1rem;
 }
 
 
 .card{
   height: 400px;
-  width: 300px;
+  max-width: 330px;
+  margin: auto;
   background-color: var(--clr-dark-element);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 8px 0px;
   border-radius: 15px 15px 15px 15px;
@@ -251,17 +249,4 @@ a{
     width: 320px;
     margin-bottom: 0px;
   }
-
-  .countries{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    grid-gap: 16px; 
-  }
-
-  .card{
-    width: 330px;
-    margin: auto;
-  }
-  
-
 }  
